package edu.fiuba.algo3.modelo;

import java.util.ArrayList;

public interface Equipamiento {

    void resistir(Energia e);

    Equipamiento actualizarEquipo();

}
