package edu.fiuba.algo3.modelo;

public interface Nivel {

    void sumarPuntos(Energia e, int turnosJugados);

    void setNivel(Gladiador g);

    void verNivel();

}
